--- a/ex1/Stylesheets/style.css
+++ b/ex1/Stylesheets/style.css
@@ -1,111 +1,107 @@
-#wrapper{
 
-	margin : 70px 100px 100px 100px;
-	width: 1520px;
+#slider {}
+#slider img{
+	max-width:100%;
 }
 
-#header{
-	display:block;
-
+#content {}
+#container{
+	margin-top:10px; 
+	min-height:500px;
 }
-#logo{
-	display:inline-block;
+
+#container .col{
 	float:left;
+	width:400px;
 }
 
-#nav {
-	display:inline-block;
-	float:left;
-	text-align: left;
+#col1, #col3{
+	background:#f2f2f2;
 }
 
-#nav ul {
-	
-	margin: 0;
-	padding: 0px 10px 20px 10px;
-	list-style: none;
-	font-family: sans-serif;
+h3 {
+	font-weight:bold;
+	font-size:14px;
 }
-#nav li {
-	
-	float: left;
+
+.block {
+	margin:15px;
 }
-#nav a {
+
+h2,h3, .col a{
+	text-transform:uppercase;
+}
+
+
+h2 {
+	border-left:4px solid #f04004; 
+	padding-left:8px;
+	font-size:14px; 
+	margin-top:10px;
+}
+
+/* LA COLONE 1 */
+.attribute-time{
+	margin:5px 0; 
+	padding:5px 0; 
+	font-size:14px;
+}
+
+#col1 .date{
+	color:#156bae;
+	font-weight:bold;
+}
+.hour{
+	padding-left:10px; 
+	border-left:1px solid #999;
+}
+#col1 h3{
+	margin-top:30px;
+}
+#col1 .date, #col1 .hour{ 
+	border-top:1px solid #999;
+	border-bottom:1px solid #999;
+}
+
+/* LA COLONE 2 */
+#col2 .attribute-short {
+	margin:10px 0; 
+	border-top: 1px solid #999; 
+	border-bottom: 1px solid #999;
+	padding:8px 0;
+}
+
+/* BOUTONS DE LA COLONE 3 */
+.button {
+	background: #156bae; 
+	margin:20px;
+	padding:10px;
+}
+
+.button:hover {
+	background-color:#f04004; 
+	cursor: pointer;
+}
+
+#col3 h3{
+	color:#FFF;
+}
+
+#col3 img{
+	float:left;height:100%; 
+	padding-right: 10px;
+}
+
+.twitter img{
+	padding-left: 20px; 
+	padding-bottom: 25px;
+}
+
+.twitter span{
+	color:#17aaa2;
+}
+
+.twitter span{
 	display: block;
-	height: 1%;
-	padding: 6px 10px 6px 10px;
-	line-height: 1.5;
-	font-size: .9em;
-	text-decoration: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-#slider{
-	width: 1000px;
-	margin: 20px 0 0 0;
-	padding: 20px 0 0 0;
-}
-
-#content{
-	display:block;
-
-}
-
-
-.colone {
-	float:left;
-	width: 33,3333333333%;
-	height: 500px;
-}
-
-#col1{
-	height: 100%;
-	margin-right: 10px;
-	margin-top: 10px;
-	background-color: pink;
-}
-
-s
-#col2 {
-	height: 100%;
-	margin: 10px;
-
-}
-
-
-
-#col3 {
-	height: 100%;
-	margin-left: 10px;
-	margin-top: 10px;
-	background-color: green;
-}
-
-.contentcol{padding: 10px;}
-
-
-ul{
-    padding: 0;
-    margin: 50px;
-}
-
-ul li{
-    display: table-cell;
-    margin: 50px;
-}
-li{
-	margin-left: 50px;
-}
-
-h2 {
-	font-family: sans-serif;
+	margin-bottom: 20px;
 }
